--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-emails/mgt-person-card-emails.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-emails/mgt-person-card-emails.scss
@@ -7,3 +7,65 @@
 
 @import '../../../../../styles/shared-styles.scss';
 @import '../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+
+:host {
+  position: relative;
+
+  .root {
+    padding: 20px;
+
+    &.compact {
+      padding: 0;
+    }
+
+    .title {
+      font-size: 14px;
+      font-weight: 600;
+      color: #323130;
+      margin-bottom: 24px;
+    }
+
+    .email {
+      margin-bottom: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &:last-child {
+        margin-bottom: unset;
+      }
+
+      .email__detail {
+        min-width: 0;
+
+        .email__subject {
+          font-size: 14px;
+          color: #323130;
+        }
+
+        .email__from {
+          font-size: 12px;
+          color: #201f1e;
+        }
+
+        .email__message {
+          font-size: 12px;
+          color: #797775;
+        }
+
+        > div {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+
+      .email__date {
+        font-size: 12px;
+        color: #797775;
+        margin-left: 10px;
+        white-space: nowrap;
+      }
+    }
+  }
+}
