--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-files/mgt-person-card-files.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-files/mgt-person-card-files.scss
@@ -7,3 +7,59 @@
 
 @import '../../../../../styles/shared-styles.scss';
 @import '../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+
+:host {
+  position: relative;
+
+  .root {
+    padding: 20px;
+
+    &.compact {
+      padding: 0;
+    }
+
+    .title {
+      font-size: 14px;
+      font-weight: 600;
+      color: #323130;
+      margin-bottom: 24px;
+    }
+
+    .file {
+      display: flex;
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: unset;
+      }
+
+      .file__icon {
+        width: 28px;
+        min-width: 28px;
+        height: 28px;
+        margin-right: 12px;
+      }
+
+      .file__details {
+        min-width: 0;
+        margin-right: 40px;
+
+        .file__name {
+          font-size: 14px;
+          color: #323130;
+        }
+
+        .file__last-modified {
+          font-size: 12px;
+          color: #797775;
+        }
+
+        > div {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+  }
+}
