--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-organization/mgt-person-card-organization.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-organization/mgt-person-card-organization.scss
@@ -18,7 +18,7 @@
       padding: 0;
 
       .coworker {
-        margin: 0;
+        margin: 0 0 6px 0;
 
         .coworker__image {
           height: 40px;
