--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -11,12 +11,23 @@
 $avatar-size-s: var(--avatar-size-s, var(--avatar-size, 24px));
 $avatar-size: var(--avatar-size, var(--avatar-size-s, 48px));
 $avatar-border: var(--avatar-border, 0);
+$avatar-border-radius: var(--avatar-border-radius, 50%);
+
 $initials-color: var(--initials-color, white);
+
+$font-family: var(--font-family, var(--default-font-family));
 $font-size: var(--font-size, #{$ms-font-size-m});
 $font-weight: var(--font-weight, #{$ms-font-weight-semibold});
 $color: var(--color, #{$ms-color-neutralDark});
-$email-font-size: var(--email-font-size, #{$ms-font-size-s});
-$email-color: var(--email-color, var(--color, #{$ms-color-neutralPrimary}));
+
+$line2-font-size: var(--line2-font-size, var(--email-font-size, #{$ms-font-size-s}));
+$line2-font-weight: var(--line2-font-weight, 400);
+$line2-color: var(--line2-color, var(--email-color, var(--color, #{$ms-color-neutralPrimary})));
+
+$line1-text-transform: var(--line1-text-transform, none);
+$line2-text-transform: var(--line2-text-transform, none);
+
+$details-spacing: --details-spacing;
 
 $presence-color-online: #6bb700;
 $presence-color-dnd: #c50f1f;
@@ -30,7 +41,7 @@ $presence-color-oof: #b4009e;
 
 :host {
   display: block;
-  font-family: var(--default-font-family);
+  font-family: $font-family;
   vertical-align: top;
 }
 
@@ -47,8 +58,8 @@ mgt-person svg {
 
 :host img,
 mgt-person img {
-  border: var(--avatar-border);
-  border-radius: 50%;
+  border: $avatar-border;
+  border-radius: $avatar-border-radius;
 }
 
 :host .person-root,
@@ -179,7 +190,7 @@ mgt-person .person-root {
 
     &.initials {
       color: $initials-color;
-      border-radius: 50%;
+      border-radius: $avatar-border-radius;
       font-weight: 400;
 
       & .initials-text,
@@ -322,12 +333,12 @@ mgt-person .person-root {
     flex-shrink: 1;
     display: flex;
     flex-direction: column;
-    margin-left: 12px;
     overflow: hidden;
     line-height: 1.4;
+    margin-left: var($details-spacing, 12px);
 
     &.small {
-      margin-left: 6px;
+      margin-left: var($details-spacing, 6px);
     }
 
     & > div {
@@ -336,14 +347,17 @@ mgt-person .person-root {
       overflow: hidden;
     }
 
-    .user-name {
+    .line1 {
       font-size: $font-size;
       font-weight: $font-weight;
+      text-transform: $line1-text-transform;
     }
 
-    .user-email {
-      color: $email-color;
-      font-size: $email-font-size;
+    .line2 {
+      color: $line2-color;
+      font-size: $line2-font-size;
+      font-weight: $line2-font-weight;
+      text-transform: $line2-text-transform;
     }
   }
 }
