--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -20,13 +20,12 @@ $font-family: var(--font-family, var(--default-font-family));
 $font-size: var(--font-size, #{$ms-font-size-m});
 $font-weight: var(--font-weight, #{$ms-font-weight-semibold});
 $color: var(--color, #{$ms-color-neutralDark});
+$text-transform: var(text-transform, none);
 
 $line2-font-size: var(--line2-font-size, var(--email-font-size, #{$ms-font-size-s}));
 $line2-font-weight: var(--line2-font-weight, 400);
-$line2-color: var(--line2-color, var(--email-color, var(--color, #{$ms-color-neutralPrimary})));
-
-$line1-text-transform: var(--line1-text-transform, none);
-$line2-text-transform: var(--line2-text-transform, none);
+$line2-color: var(--line2-color, var(--email-color, #{$color}));
+$line2-text-transform: var(--line2-text-transform, #{$text-transform});
 
 $details-spacing: --details-spacing;
 
@@ -351,7 +350,7 @@ mgt-person .person-root {
     .line1 {
       font-size: $font-size;
       font-weight: $font-weight;
-      text-transform: $line1-text-transform;
+      text-transform: $text-transform;
     }
 
     .line2 {
