--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -12,21 +12,16 @@
   position: relative;
 
   .root {
-    padding: 20px;
-
     .title {
       font-size: 14px;
       font-weight: 600;
       color: #323130;
-      margin-bottom: 24px;
+      margin: 20px 20px 12px 20px;
     }
 
     .part {
-      display: flex;
-
-      &:not(:last-child) {
-        margin-bottom: 20px;
-      }
+      display: grid;
+      grid-template-columns: auto 1fr auto;
 
       .part__icon {
         display: flex;
@@ -35,13 +30,19 @@
         height: 20px;
         align-items: center;
         justify-content: center;
-        margin-right: 14px;
+        margin-left: 20px;
+        margin-top: 10px;
+        line-height: 20px;
       }
 
       .part__details {
+        margin: 10px 14px;
+        overflow: hidden;
+
         .part__title {
           font-size: 12px;
           color: #797775;
+          line-height: 20px;
         }
 
         .part__value {
@@ -51,15 +52,39 @@
           font-weight: 400;
 
           .part__link {
-            all: initial;
             color: #0078d4;
             font-family: var(--default-font-family);
             font-size: 14px;
+            cursor: pointer;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            width: 100%;
+            display: inline-block;
+
+            &:hover {
+              color: #004578;
+            }
           }
         }
+      }
 
-        > div {
-          line-height: 20px;
+      .part__copy {
+        width: 32px;
+        height: 100%;
+        background-color: #e1dfdd;
+        visibility: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &:hover {
+        background-color: #f3f2f1;
+        cursor: pointer;
+
+        .part__copy {
+          visibility: visible;
         }
       }
     }
@@ -68,7 +93,24 @@
       padding: 0;
 
       .part {
-        margin-bottom: 8px;
+        display: flex;
+
+        &:not(:last-child) {
+          margin-bottom: 8px;
+        }
+
+        &:hover {
+          background-color: initial;
+          cursor: initial;
+
+          .part__copy {
+            visibility: hidden;
+          }
+        }
+      }
+
+      .part__details {
+        margin: 0;
       }
 
       .part__title {
@@ -76,7 +118,12 @@
       }
 
       .part__icon {
+        margin-top: 0;
         margin-right: 6px;
+      }
+
+      .part__copy {
+        display: none;
       }
     }
   }
