--- a/src/beta/components/mgt-person-card-beta/mgt-person-card.scss
+++ b/src/beta/components/mgt-person-card-beta/mgt-person-card.scss
@@ -8,14 +8,14 @@
 @import '../../../styles/shared-styles.scss';
 @import '../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
-$person-card-display-name-font-size: var(--person-card-display-name-font-size, 27.3103px);
-$person-card-title-font-size: var(--person-card-title-font-size, 18.2069px);
-$person-card-subtitle-font-size: var(--person-card-subtitle-font-size, 15.1724px);
+$person-card-display-name-font-size: var(--person-card-display-name-font-size, 20px);
+$person-card-title-font-size: var(--person-card-title-font-size, 14px);
+$person-card-subtitle-font-size: var(--person-card-subtitle-font-size, 12px);
 $person-card-details-title-font-size: var(--person-card-details-title-font-size, 14px);
 $person-card-details-item-font-size: var(--person-card-details-item-font-size, 15px);
 $person-card-display-name-color: var(--person-card-display-name-color, #333333);
-$person-card-title-color: var(--person-card-title-color, #767676);
-$person-card-subtitle-color: var(--person-card-subtitle-color, #767676);
+$person-card-title-color: var(--person-card-title-color, #797775);
+$person-card-subtitle-color: var(--person-card-subtitle-color, #797775);
 $person-card-details-title-color: var(--person-card-details-title-color, #000000);
 $person-card-details-item-color: var(--person-card-details-item-color, #201f1e);
 $person-card-background-color: var(--person-card-background-color, #ffffff);
@@ -30,7 +30,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
     display: grid;
     grid-template-rows: auto 1fr;
     grid-template-columns: auto 1fr;
-    padding: 18px 14px;
+    padding: 15px 15px 20px 15px;
 
     mgt-person.person-image {
       --avatar-size-s: 75px;
@@ -47,6 +47,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       white-space: nowrap;
       background-color: transparent;
       width: 100%;
+      margin-top: 5px;
+
       .display-name {
         font-size: $person-card-display-name-font-size;
         color: $person-card-display-name-color;
@@ -83,7 +85,6 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       max-width: 120px;
 
       .icon {
-        margin-top: 8px;
         display: flex;
         align-items: center;
         cursor: pointer;
@@ -119,7 +120,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       justify-content: center;
       align-items: center;
       height: 28px;
-      background: rgba(196, 196, 196, 0.1);
+      background: #f3f2f1;
+      border-top: 1px solid rgba(196, 196, 196, 0.4);
       .expanded-details-svg {
         margin-bottom: 3px;
       }
