Fix for presence and avatar sizing

--- a/src/beta/components/mgt-person-card-beta/mgt-person-card.scss
+++ b/src/beta/components/mgt-person-card-beta/mgt-person-card.scss
@@ -34,6 +34,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
 
     mgt-person.person-image {
       --avatar-size-s: 75px;
+      --avatar-size: 75px;
       margin-right: 14px;
     }
 
