Style updates and added copy functionality to contact parts

--- a/src/beta/components/mgt-person-card-beta/mgt-person-card.scss
+++ b/src/beta/components/mgt-person-card-beta/mgt-person-card.scss
@@ -40,6 +40,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       }
 
       &:hover {
+        cursor: pointer;
+
         svg {
           fill: #000000;
         }
