--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-messages/mgt-person-card-messages.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-messages/mgt-person-card-messages.scss
@@ -12,11 +12,17 @@
   position: relative;
 
   .root {
+    padding: 20px 0;
+
+    &.compact {
+      padding: 0;
+    }
+
     .title {
       font-size: 14px;
       font-weight: 600;
       color: #323130;
-      margin: 20px 20px 12px 20px;
+      margin: 0 20px 12px 20px;
     }
 
     .message {
