--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-organization/mgt-person-card-organization.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-organization/mgt-person-card-organization.scss
@@ -37,6 +37,11 @@
       }
     }
 
+    .no-data,
+    .loading {
+      padding: 0 20px;
+    }
+
     .title {
       font-size: 14px;
       font-weight: 600;
