--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -14,6 +14,11 @@
   .root {
     padding: 20px 0;
 
+    .no-data,
+    .loading {
+      padding: 0 20px;
+    }
+
     .title {
       font-size: 14px;
       font-weight: 600;
