--- a/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-messages/mgt-person-card-messages.scss
+++ b/src/beta/components/mgt-person-card-beta/sections/mgt-person-card-messages/mgt-person-card-messages.scss
@@ -18,6 +18,11 @@
       padding: 0;
     }
 
+    .no-data,
+    .loading {
+      padding: 0 20px;
+    }
+
     .title {
       font-size: 14px;
       font-weight: 600;
