--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -247,6 +247,7 @@ mgt-people-picker .loading-text {
   color: $font-color;
   margin-left: 50px;
   margin-right: 50px;
+  color: #0078d4;
 }
 
 :host .SearchErrorIcon,
@@ -258,11 +259,31 @@ mgt-people-picker .SearchErrorIcon {
 
 :host .message-parent,
 mgt-people-picker .message-parent {
-  margin: 20px;
+  padding: 2px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   vertical-align: middle;
+  .spinner {
+    border: 2px solid #c7e0f4; /* Light grey */
+    border-top: 2px solid #0078d4; /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 :host .highlight-search-text,
