--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -40,7 +40,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       display: grid;
       position: relative;
       overflow: hidden;
-      text-overflow: ellipse;
+      text-overflow: ellipsis;
       white-space: nowrap;
       background-color: transparent;
       width: 100%;
@@ -54,12 +54,12 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
           height: 100%;
           top: 0;
           right: 0;
-          background: linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
-          background: -moz-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
-          background: -o-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
-          background: -ms-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
-          background: -webkit-linear-gradient(left, transparent, transparent 80%, $person-card-background-color);
-        }
+          background-image: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 80%,$person-card-background-color 100%);
+          background-image: -moz-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 80%,$person-card-background-color 100%);
+          background-image: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 80%,$person-card-background-color 100%);
+          background-image: -ms-linear-gradient(left right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 80%,$person-card-background-color 100%);
+          background-image: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 80%,$person-card-background-color 100%);
+         }
       }
 
       .job-title {
