--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -67,7 +67,7 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
     .channel-chosen-list {
       min-height: 29px;
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       vertical-align: middle;
       margin: 0 0 0 0;
       list-style-type: none;
@@ -106,7 +106,7 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
         font-weight: normal;
         font-size: 14px;
         line-height: 19px;
-        background-color: $input-background-color;
+        background-color: transparent;
         color: $font-color;
         padding-left: 5px;
         &::placeholder {
@@ -120,7 +120,8 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
       .close-icon {
         display: inline-block;
         position: absolute;
-        right: 10px;
+        right: 0;
+        padding: 10px;
         line-height: normal;
         font-family: 'FabricMDL2Icons';
         margin-bottom: 1px;
