--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -37,14 +37,18 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
   position: relative;
 
   .input-wrapper {
+    font-family: var(--default-font-family, 'Segoe UI');
     display: flex;
-    order: 2;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 4px 10px;
+    position: relative;
     background-color: $input-background-color;
     font-size: 14px;
     color: $font-color;
+    min-height: 29px;
     line-height: 19px;
     cursor: text;
-    padding-bottom: 5px;
     border: $input-border;
     border-bottom: $input-border-bottom;
     border-left: $input-border-left;
@@ -58,97 +62,129 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
       border-color: $input-focus-color;
     }
 
-    .search-icon {
-      display: inline-block;
-      padding-top: 9px;
-      padding-left: 9px;
+    .selected-team {
+      padding-right: 10px;
+      border: none;
+      display: flex;
+      position: relative;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      align-items: center;
+      height: 24px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      .arrow {
+        margin-left: 8px;
+        margin-right: 8px;
+      }
+      .selected-team-name {
+        font-weight: bold;
+      }
     }
 
-    .channel-chosen-list {
-      min-height: 29px;
+    .search-wrapper {
       display: flex;
       flex-wrap: nowrap;
-      vertical-align: middle;
-      margin: 0 0 0 0;
-      list-style-type: none;
-      padding-left: 5px;
+      align-items: center;
+    }
+
+    .team-chosen-input {
+      display: inline-block;
+      border: none;
+      line-height: normal;
+      outline: none;
       font-family: var(--default-font-family, 'Segoe UI');
       font-style: normal;
       font-weight: normal;
+      font-size: 14px;
+      line-height: 19px;
+      background-color: transparent;
       color: $font-color;
-      .selected-team {
-        padding-top: 1px;
-        padding-right: 6px;
-        border: none;
-        display: flex;
-        margin: 4px 5px 0 0;
-        align-items: center;
-        height: 24px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        .arrow {
-          margin-left: 8px;
-          margin-right: 8px;
-        }
-        .selected-team-name {
-          font-weight: bold;
-        }
-      }
-
-      .team-chosen-input {
-        position: relative;
-        border: none;
-        line-height: normal;
-        outline: none;
-        font-family: var(--default-font-family, 'Segoe UI');
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 19px;
-        background-color: transparent;
-        color: $font-color;
-        padding-left: 5px;
-        &::placeholder {
-          color: $placeholder-default-color;
-        }
-        &:focus::placeholder {
-          color: $placeholder-focus-color;
-        }
-      }
-
-      .close-icon {
-        display: inline-block;
-        position: absolute;
-        right: 0;
-        padding: 10px;
-        line-height: normal;
-        font-family: 'FabricMDL2Icons';
-        margin-bottom: 1px;
-        cursor: pointer;
+      padding-left: 5px;
+      &::placeholder {
         color: $placeholder-default-color;
-        &:hover {
-          color: $font-color;
-        }
       }
-
-      .search-icon {
-        padding-top: 9px;
-        padding-left: 5px;
-        font-family: 'FabricMDL2Icons';
-        color: $accent-color;
+      &:focus::placeholder {
+        color: $placeholder-focus-color;
       }
     }
+    .team-chosen-input[contenteditable]:empty::after {
+      content: attr(data-placeholder);
+      display: inline-block;
+      color: $placeholder-default-color;
+    }
+    .team-chosen-input[contenteditable]:empty:focus::after {
+      content: attr(data-placeholder);
+      color: $placeholder-focus-color;
+    }
 
-    .input-search {
-      margin: 7px 2px 0px 0px;
+    .search-icon {
+      align-self: flex-start;
+      font-family: 'FabricMDL2Icons';
+      color: $accent-color;
     }
 
     .input-search-start {
-      margin: 7px 3px 0px 0px;
       line-height: normal;
       margin-inline-start: 0px;
       margin-inline-end: 0px;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 90%;
+      top: 2px;
+      right: 2px;
+      // bottom: 4px;
+      background-image: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 80%,
+        $input-background-color 100%
+      );
+      background-image: -moz-linear-gradient(
+        left,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 80%,
+        $input-background-color 100%
+      );
+      background-image: -o-linear-gradient(
+        left,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 80%,
+        $input-background-color 100%
+      );
+      background-image: -ms-linear-gradient(
+        left,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 80%,
+        $input-background-color 100%
+      );
+      background-image: -webkit-linear-gradient(
+        left,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 80%,
+        $input-background-color 100%
+      );
+    }
+  }
+
+  .close-icon {
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+    top: 12px;
+    line-height: normal;
+    font-family: 'FabricMDL2Icons';
+    cursor: pointer;
+    color: $placeholder-default-color;
+    background-color: $input-background-color;
+    &:hover {
+      color: $font-color;
     }
   }
 
