--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -25,7 +25,7 @@ $input-hover-color: var(--input-hover-color, #323130);
 $input-focus-color: var(--input-focus-color, #0078d4);
 $input-background-color: var(--input-background-color, white);
 
-$dropdown-item-hover-background: var(--dropdown-item-hover-background, #f1f1f1dd);
+$dropdown-item-hover-background: var(--dropdown-item-hover-background, rgba(241, 241, 241, 0.87));
 $dropdown-background-color: var(--dropdown-background-color, white);
 $dropdown-item-selected-background: var(--dropdown-item-selected-background, #deecf9);
 
