--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -46,7 +46,7 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
     background-color: $input-background-color;
     font-size: 14px;
     color: $font-color;
-    min-height: 29px;
+    height: 29px;
     line-height: 19px;
     cursor: text;
     border: $input-border;
