--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -25,7 +25,7 @@ $input-focus-color: var(--input-focus-color, #0078d4);
 $input-background-color: var(--input-background-color, var(--people-list-background-color, white));
 
 $dropdown-background-color: var(--dropdown-background-color, white);
-$dropdown-item-hover-background: var(--dropdown-item-hover-background, #f1f1f1dd);
+$dropdown-item-hover-background: var(--dropdown-item-hover-background, rgba(241, 241, 241, 0.87));
 
 $placeholder-default-color: var(--placeholder-default-color, #605e5c);
 $placeholder-focus-color: var(--placeholder-focus-color, #323130);
@@ -163,7 +163,6 @@ mgt-people-picker .CloseIcon {
   cursor: pointer;
   color: $font-color;
   background-color: rgb(241, 241, 241);
-  position: absolute;
   right: 0px;
 }
 
@@ -276,7 +275,7 @@ mgt-person {
   --color: $font-color;
   color: $font-color;
   margin-bottom: 1px;
-  margin-right: 26px;
+  margin-right: 4px;
 }
 
 :host .search-error-text,
