--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -36,6 +36,8 @@ $font-color: var(--font-color, #323130);
   font-family: var(--default-font-family, 'Segoe UI');
   height: 38px;
   display: contents;
+  height: 100%;
+  overflow: hidden;
 }
 :host .root,
 mgt-people-picker .root {
@@ -44,7 +46,6 @@ mgt-people-picker .root {
 
 :host .people-picker,
 mgt-people-picker .people-picker {
-  position: relative;
   background-color: $input-background-color;
   padding-bottom: 6px;
   border: $input-border;
